@@ -671,6 +671,7 @@ FUNTAB R_FunTab[] = {
     {"file.remove", do_fileremove, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"file.rename", do_filerename, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"file.append", do_fileappend, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"codeFiles.append", do_fileappend, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"file.symlink", do_filesymlink, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"list.files", do_listfiles, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"file.exists", do_fileexists, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
